# short_vec

./: Cargo.toml  README.md  deny.toml
src/: lib.rs  short_vec.rs
